[Mac] Playback target isn't set on new element https://bugs.webkit.org/show_bug.cgi?id=144724

Reviewed by Jer Noble.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h:
* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer): Call setShouldPlayToPlaybackTarget
if necessary.
(WebCore::MediaPlayerPrivateAVFoundationObjC::setShouldPlayToPlaybackTarget): Remember
the setting in case we don't have an AVPlayer yet.


Canonical link: https://commits.webkit.org/162759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183927 268f45cc-cd09-0410-ab3c-d52691b4dbfc