Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h
@@ -379,6 +379,7 @@ private:
     bool m_cachedCanPlayFastReverse;
 #if ENABLE(WIRELESS_PLAYBACK_TARGET)
     mutable bool m_allowsWirelessVideoPlayback;
+    bool m_shouldPlayToPlaybackTarget { false };
 #endif
 };
 
